<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_uid"
        style="@style/AppEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_user_id"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_uname"
        style="@style/AppEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:hint="@string/hint_user_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_uid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />
    <EditText
        android:id="@+id/et_uapellido"
        style="@style/AppEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:hint="@string/hint_user_lname"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_uname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />
    <EditText
        android:id="@+id/et_uphone"
        style="@style/AppEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:hint="@string/hint_user_phone"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_uapellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btn_image"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/select_image"
        app:layout_constraintTop_toBottomOf="@id/et_uphone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <ImageView
        android:id="@+id/iv_uphoto"
        android:layout_width="222dp"
        android:layout_height="209dp"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/profile_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_image"
        app:layout_constraintWidth_percent="0.7"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btn_add_user"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_uphoto"
        app:layout_constraintWidth_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>