<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_medium"
    android:background="?selectableItemBackground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/profile_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        app:srcCompat="@drawable/logo_icon" />

    <TextView
        android:id="@+id/tv_uid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:textSize="@dimen/text_small"
        android:textColor="@color/text_primary"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_item"
        tools:text="User ID"/>

    <TextView
        android:id="@+id/tv_uname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="@id/tv_uid"
        app:layout_constraintTop_toBottomOf="@id/tv_uid"
        app:layout_constraintEnd_toEndOf="@id/tv_uid"
        tools:text="User Name"/>
    <TextView
        android:id="@+id/tv_uapellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="@id/tv_uname"
        app:layout_constraintTop_toBottomOf="@id/tv_uname"
        app:layout_constraintEnd_toEndOf="@id/tv_uname"
        tools:text="User LName"/>
    <TextView
        android:id="@+id/tv_uphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="@id/tv_uapellido"
        app:layout_constraintTop_toBottomOf="@id/tv_uapellido"
        app:layout_constraintEnd_toEndOf="@id/tv_uapellido"
        tools:text="User Phone"/>

    <ImageButton
        android:id="@+id/btn_edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit_user_description"
        app:layout_constraintEnd_toStartOf="@id/btn_delete_item"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_edit"/>

    <ImageButton
        android:id="@+id/btn_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_user_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete"/>


</androidx.constraintlayout.widget.ConstraintLayout>

